--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>MyTODO list</title>
+        <title>My KEA TODO list</title>
     </head>
     <style>
         *{
